# rust-async-scrapping

./: Cargo.toml
benches/: bench_parser.rs
src/: client.rs  coordinator.rs  lib.rs  main.rs
src/parsers/: tl.rs
src/scrapers/: amazon.rs  mod.rs
src/structs/: mod.rs
src/utils/: mod.rs
