[package]
name = "html_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
tl = "0.7.7"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "gzip", "deflate"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "bench_parser"
harness = false
